# durica

./: .gitignore  Dockerfile  fly.toml  main.py  pyproject.toml  requirements.txt
config/: database.py
models/: odpoved.py
routes/: prezentacia.py  route.py
schema/: schemas.py
static/css/: styles.css
static/js/: google_visit_tracker.js
templates/: base.html  button_zlavy.html  home.html  kategorie.html  kategorie_celorocne.html  kategorie_specialne.html  kontakt.html  o-nas.html  obrazok.html  odpovede.html  pouzitie.html  produkt.html  vyroba.html  zlavy.html
templates/macros/: macros.html
utils/: email.py  functions.py  produkty.csv  produkty.ipynb
