[project]
name = "durica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses>=0.8",
    "fastapi>=0.115.7",
    "jinja2>=3.1.5",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pydotenv>=0.0.7",
    "pymongo>=4.10.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]
